--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,17 +6,14 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>More</th>
-      <th>&More</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+    <% @categories = @categories.where(category_id: nil)%>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.name %></td>
-        <td><%= category.name %></td>
         <td><%= category.name %></td>
         <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
